fixes #115